<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.examenigma.technex.emailanalyser.MainActivity">
<LinearLayout

    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:orientation="vertical">


        <EditText
            android:id="@+id/word"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/search"
            android:padding="10dp"

            android:inputType="textCapWords"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />



    <Button
        android:id="@+id/Predict"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ea4c88"
        android:text="@string/predict"
        android:textColor="@color/white"
 />
    <TextView
        android:id="@+id/From"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:text="@string/From"

        android:padding="10dp"

        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />
    <TextView
        android:id="@+id/To"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:text="@string/To"

        android:padding="10dp"

        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />
    <TextView
        android:id="@+id/ToDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:text="@string/ToDate"

        android:padding="10dp"

        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />
    <TextView
        android:id="@+id/FromDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:text="@string/FromDate"

        android:padding="10dp"

        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />
    <TextView
        android:id="@+id/HasAttachments"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:text="@string/HasAttachments"

        android:padding="10dp"

        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />
    <TextView
        android:id="@+id/AttachmentType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:text="@string/AttachmentType"

        android:padding="10dp"

        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />
    <TextView
        android:id="@+id/AttachmentSize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:text="@string/AttachmentSize"

        android:padding="10dp"

        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />
    <TextView
        android:id="@+id/AttachmentName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:text="@string/AttachmentName"

        android:padding="10dp"

        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />
    <TextView
        android:id="@+id/Subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:text="@string/Subject"

        android:padding="10dp"

        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />

    <TextView
        android:id="@+id/CC"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:text="@string/CC"

        android:padding="10dp"

        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />



</LinearLayout>
</ScrollView>